# atom-engine

./: .hgignore  Makefile  README  README.txt  compile  configure  configure.bat  preproc.h
cmake_modules/: ATOM_checks.cmake  FindSDL.cmake  WindowManager_checks.cmake  functions.cmake  init.cmake  modules.cmake
core/: error.cpp  error.h  gamefs.cpp  gamefs.h  main.cpp  window.cpp  window.h
src/: CMakeLists.txt  preproc.h
src/AtomEngine/: AtomEngine.cc  AtomEngine.h  CMakeLists.txt  OAtomEngine.cc  OAtomEngine.h
src/AtomEngine/tests/: CMakeLists.txt
src/AtomError/: AtomError.cc  AtomError.cpp  AtomError.h  AtomError.h~  CMakeLists.txt  OAtomError.cc  OAtomError.h
src/AtomError/Unix/: SystemJournal.cc  SystemJournal.h  logpath.cc
src/AtomError/Windows/: SystemJournal.cc  SystemJournal.h  logpath.cc
src/AtomFS/: CMakeLists.txt  OControlSumEngine.cc  OControlSumEngine.h  OCryptEngine.cc  OCryptEngine.h  atomfs.cc  atomfs.h  messages.msg
src/AtomFS/Windows/: create.cc
src/AtomLog/: AtomLog.cc  AtomLog.h  CMakeLists.txt
src/AtomLog/Unix/: logpath.cc
src/AtomLog/Windows/: logpath.cc
src/GameFS/: CMakeLists.txt  byteorderdetect.cc  byteorderdetect.h  crc32.cc  crc32.h  create.cc  crypt.cc  file.cc  gamefs.cc  gamefs.cpp  gamefs.h  messages.h  messages.msg  mount.cc  navigate.cc  navigate.h  strings.cc  strings.h
src/GameFS/Unix/: SysDepend_create.cc  SysDepend_file.cc  SysDepend_strings.cc
src/GameFS/Windows/: SysDepend_create.cc  SysDepend_file.cc  SysDepend_strings.cc
src/ResourceManager/: CMakeLists.txt  ResourceManager.cc  ResourceManager.h
src/SysVars/: CMakeLists.txt  byteorderdetect.cc  guid.cc  guid.h  sysvars.h
src/SysVars/Unix/: guid.cc
src/SysVars/Windows/: guid.cc
src/WindowManager/: AtomInstall.cmake  CMakeLists.txt  CMakeLists.txt~  OEventHandler.h  OWindow.cc  OWindow.h  WM_Types.h  messages.h  messages.msg
src/WindowManager/Native/: CMakeLists.txt
src/WindowManager/Native/Unix/: EventHandler.cc  EventHandler.h  WindowManager.cc  WindowManager.cc~  WindowManager.h  WindowManager.h~
src/WindowManager/Native/Windows/: EventHandler.cc  EventHandler.h  WindowManager.cc  WindowManager.h  WindowManager.h~
src/WindowManager/SDL/: CMakeLists.txt  WindowManager.cc  WindowManager.h
src/tests/: AtomEngine_PriorityQueue_Test.cc  AtomError_GetLogPath_Test.cc  CMakeLists.txt  test_exec.cc
src/tests/AtomError/: AtomError_GetLogPath_Test.cc  AtomError_common_tests.cc
src/tests/AtomFS/: AtomFS_Common_Tests.cc  AtomFS_Create_Test.cc
src/tests/AtomLog/: AtomLog_GetLogPath_Test.cc
src/tests/SysVars/: SysVars_common_tests.cc
src/utils/: CMakeLists.txt
src/utils/FSManager/: CMakeLists.txt  crc32.h  fsman.cc
src/utils/GameFSManager/: CMakeLists.txt  fsman.cpp
utils/: crc32.cpp  fsman.cpp
